# WalkAssistant

./: .gitignore  charts.py  config.py  config.yaml  desktop.ini  main.py  osc_callbacks_test.py  osc_message_notify_test.py  osc_server.py  osc_status_test.py  pyproject.toml  run_osc_test.py  send_osc.py  test_chart_display.py  test_chart_simple.py  test_exit.py  test_exit2.py  test_output.txt  test_speedchart.py  test_speedchart_runtime.py  value_types.py
tests/: run_simple_test.py  test_config.py  test_integration.py  test_main.py  test_osc_server.py  test_ui_pattern.py  test_value_types.py
