[project]
name = "walkassistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flet-charts>=0.80.5",
    "flet[all]>=0.80.5",
    "infi-systray>=0.1.12.1",
    "keyboard>=0.13.5",
    "numpy>=2.2.6",
    "pynput>=1.8.1",
    "pystray==0.19.5",
    "pystrayfix==0.19.6",
    "python-osc>=1.9.3",
]
