[project]
name = "walkassistant"
version = "0.1.0"
description = "Walk assistant app to turn OSC messages into a visual representation of the user's walking activity."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aenum>=3.1.16",
    "flet-charts>=0.80.5",
    "flet[all]>=0.80.5",
    "infi-systray>=0.1.12.1",
    "keyboard>=0.13.5",
    "python-osc>=1.9.3",
]
[tool.flet]
project = "walk-assistant"
company = "WalkAssistant"
app.exclude = ["__pycache__", ".git", ".github", ".idea", ".junie", ".venv", "tests", "build", "**/*.lock", "**/*.bat", ".gitattributes", ".gitignore", "uv.lock" ] # --exclude
[tool.flet.cleanup]
app = true
packages = true
app_files = ["**/*.c", "**/*.h", "**/*.bat", "**/*.lock"]
package_files = ["**/*.pyi"]